# solindexly

./: Cargo.toml  README.md  accounts.json
src/: config.rs  main.rs
